# novelaist

./: .gitignore  LICENSE  LICENSE_MODERN_MESSIAH.md  README.md  pyproject.toml  requirements.txt
examples/modern_messiah/: config.json  config.json.template
examples/modern_messiah/chapters/: 001_The_awakening_of_iris.md  001_genesis.md  002_Mateos_Gaze.md  003_Ivans_Recognition.md  004_The_Temptation_of_Elias.md  005_Peters_First_Day_of_Class.md  005_Simons_First_Day_of_Class.md  006_Words_in_the_wind.md  007_Philips_Request.md  008_The_Burden_of_Peter.md  009_Lazarus_walks.md  010_The_Last_Supper_in_Vegas.md  011_End_of_a_dream.md  011_The_Return_of_the_Messiah.md  012_Iris_revenge.md  013_The_Great_Judgment.md
examples/modern_messiah/characters/: andrew.md  elias.md  iris.md  ivan.md  james.md  jayden.md  john.md  josep.md  lazarus.md  magda.md  maria.md  marta.md  mary_jane.md  mateo.md  peter.md  simon.md
examples/modern_messiah/environment/: desert.md  events.md  places.md
src/: cover_generator.py  create_novel.py  word_count.py
src/converters/: __init__.py  base_converter.py  epub_converter.py  html_converter.py  mobi_converter.py  pdf_converter.py
tests/: test_cover.py  test_novelaist.py
