[tool.poetry]
name = "novelaist"
version = "0.1.0"
package-mode = false
description = "Novel writing application with local AI"
authors = ["Rubén Pozo <rubenpozomolina@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
ollama = "^0.1.9"
reportlab = "^4.4.3"
pillow = "^9.5.0"
markdown = "^3.7"
diffusers = "^0.37.0"
torch = ">=2.10.0"
accelerate = "^1.13.0"
transformers = "^5.3.0"
xml2epub = "^2.6.11"

[tool.poetry.dev-dependencies]
pytest = "^7.4.4"
black = "^23.12.1"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"