[tool.poetry]
name = "novelaist"
version = "0.1.0"
package-mode = false
description = "Novel writing application with local AI"
authors = ["Rubén Pozo <rubenpozomolina@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
ollama = "^0.6.1"
reportlab = "^4.4.10"
pillow = "^12.1.1"
markdown = "^3.10.2"
diffusers = "^0.37.0"
torch = ">=2.10.0"
accelerate = "^1.13.0"
transformers = "^5.3.0"
xml2epub = "^2.6.11"

[tool.poetry.dev-dependencies]
pytest = "^9.0.2"
black = "^26.3.1"
flake8 = "^7.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"